--- a/p8105_hw5_xm2229.Rmd
+++ b/p8105_hw5_xm2229.Rmd
@@ -10,3 +10,45 @@ knitr::opts_chunk$set(echo = TRUE)
 ```
 
 ## Problem 1
+
+```{r}
+library(tidyverse)
+
+set.seed(10)
+
+iris_with_missing = iris %>%
+  map_df(~replace(.x, sample(1:150, 20), NA)) %>%
+  mutate(Species = as.character(Species))
+```
+
+There are two cases to address:
+
+ * For numeric variables, you should fill in missing values with the mean of non-missing values
+ * For character variables, you should fill in missing values with `virginica`
+ 
+Write a function that takes a vector as an argument; replaces missing values using the rules defined above; and returns the resulting vector.
+
+```{r}
+rule_rep = function(vector) {
+  type = typeof(vector)
+  if (type == "character") {
+    new_v = replace_na(vector, "virginica")
+  } else {
+    new_v = replace_na(vector, mean(vector, na.rm = TRUE))
+  }
+  return(new_v)
+}
+```
+
+
+Apply this function to the columns of `iris_with_missing` using a `map` statement. The table printed below is the first 22 lines of the columns of `iris_with_missing` after applying the function and we can see that indeed, all `NA` values has been replaced strictlly following the rules provided above.
+
+```{r}
+iris_with_missing %>%
+  map_df(~rule_rep(.x)) %>%
+  head(22) %>%
+  knitr::kable()
+```
+
+
+## Problem 2
