--- a/p8105_hw5_xm2229.md
+++ b/p8105_hw5_xm2229.md
@@ -4,3 +4,88 @@ Xiaoyue Ma
 11/9/2019
 
 ## Problem 1
+
+``` r
+library(tidyverse)
+```
+
+    ## ── Attaching packages ─────────────────────────────── tidyverse 1.2.1 ──
+
+    ## ✔ ggplot2 3.2.1     ✔ purrr   0.3.3
+    ## ✔ tibble  2.1.3     ✔ dplyr   0.8.3
+    ## ✔ tidyr   1.0.0     ✔ stringr 1.4.0
+    ## ✔ readr   1.3.1     ✔ forcats 0.4.0
+
+    ## ── Conflicts ────────────────────────────────── tidyverse_conflicts() ──
+    ## ✖ dplyr::filter() masks stats::filter()
+    ## ✖ dplyr::lag()    masks stats::lag()
+
+``` r
+set.seed(10)
+
+iris_with_missing = iris %>%
+  map_df(~replace(.x, sample(1:150, 20), NA)) %>%
+  mutate(Species = as.character(Species))
+```
+
+There are two cases to address:
+
+  - For numeric variables, you should fill in missing values with the
+    mean of non-missing values
+  - For character variables, you should fill in missing values with
+    `virginica`
+
+Write a function that takes a vector as an argument; replaces missing
+values using the rules defined above; and returns the resulting vector.
+
+``` r
+rule_rep = function(vector) {
+  type = typeof(vector)
+  if (type == "character") {
+    new_v = replace_na(vector, "virginica")
+  } else {
+    new_v = replace_na(vector, mean(vector, na.rm = TRUE))
+  }
+  return(new_v)
+}
+```
+
+Apply this function to the columns of `iris_with_missing` using a `map`
+statement. The table printed below is the first 22 lines of the columns
+of `iris_with_missing` after applying the function and we can see that
+indeed, all `NA` values has been replaced strictlly following the rules
+provided above.
+
+``` r
+iris_with_missing %>%
+  map_df(~rule_rep(.x)) %>%
+  head(22) %>%
+  knitr::kable()
+```
+
+| Sepal.Length | Sepal.Width | Petal.Length | Petal.Width | Species   |
+| -----------: | ----------: | -----------: | ----------: | :-------- |
+|     5.100000 |    3.500000 |     1.400000 |    0.200000 | setosa    |
+|     4.900000 |    3.000000 |     1.400000 |    0.200000 | setosa    |
+|     4.700000 |    3.200000 |     1.300000 |    0.200000 | setosa    |
+|     4.600000 |    3.100000 |     1.500000 |    1.192308 | setosa    |
+|     5.000000 |    3.600000 |     1.400000 |    0.200000 | setosa    |
+|     5.400000 |    3.900000 |     1.700000 |    0.400000 | setosa    |
+|     5.819231 |    3.400000 |     1.400000 |    0.300000 | setosa    |
+|     5.000000 |    3.400000 |     1.500000 |    0.200000 | setosa    |
+|     4.400000 |    2.900000 |     1.400000 |    0.200000 | setosa    |
+|     4.900000 |    3.100000 |     3.765385 |    0.100000 | setosa    |
+|     5.400000 |    3.075385 |     1.500000 |    0.200000 | setosa    |
+|     4.800000 |    3.400000 |     1.600000 |    0.200000 | setosa    |
+|     5.819231 |    3.075385 |     1.400000 |    0.100000 | setosa    |
+|     4.300000 |    3.000000 |     3.765385 |    0.100000 | setosa    |
+|     5.819231 |    4.000000 |     3.765385 |    0.200000 | setosa    |
+|     5.700000 |    4.400000 |     1.500000 |    0.400000 | setosa    |
+|     5.400000 |    3.900000 |     1.300000 |    0.400000 | setosa    |
+|     5.100000 |    3.500000 |     1.400000 |    1.192308 | setosa    |
+|     5.700000 |    3.800000 |     1.700000 |    0.300000 | setosa    |
+|     5.100000 |    3.800000 |     1.500000 |    1.192308 | setosa    |
+|     5.400000 |    3.400000 |     1.700000 |    0.200000 | setosa    |
+|     5.100000 |    3.700000 |     1.500000 |    0.400000 | virginica |
+
+## Problem 2
